# filtermarc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: do-checks-and-tests.yml
src/filtermarc/: __init__.py  filters.py  formats.py  in_.py  localtypes.py  marc.py  out.py
tests/: conftest.py  test_filters.py  test_formats.py  test_in.py  test_marc.py  test_out.py
