[build-system]
requires = ["setuptools>=64.0.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "filtermarc"
description = "Python package for filtering and selecting large sets of MAchine Readable Cataloging (MARC) records based on what they contain."
readme = "README.md"
authors = [{ name = "Jason Thomale", email = "jason.thomale@unt.edu"}]
keywords = ["data", "records", "MARC"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup"
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/jthomale/filtermarc"
Repository = "https://github.com/jthomale/filtermarc"
Changelog = "https://github.com/jthomale/filtermarc/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    'pytest >= 6.2.4; python_version >= "3.10"',
    'pytest >= 3.8.0; python_version < "3.10"'
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = flake8,pylint_critical,mypy_strict,py{39,310,311,312}-{oldest,latest}
isolated_build = True

[testenv]
extras =
    dev
commands =
    pytest

[testenv:py39-oldest]
deps =
    pytest==3.8.0

[testenv:py{310,311,312}-oldest]
deps =
    pytest==6.2.4

[testenv:flake8]
basepython=python3.11
skip_install = True
deps =
    flake8
commands =
    flake8 src/filtermarc tests --exclude=__pycache__

[testenv:pylint_critical]
basepython=python3.11
deps =
    pylint
commands =
    pylint filtermarc tests --errors-only --ignore=__pycache__

[testenv:pylint_all]
basepython=python3.11
deps =
    pylint
commands =
    pylint filtermarc tests --ignore=__pycache__ --good-names=_,i,mn,mx,em

[testenv:mypy_strict]
basepython=python3.11
deps =
    mypy
commands =
    mypy src/filtermarc --strict

[testenv:build_package]
basepython = python3.11
skip_install = true
deps =
    build
    twine
allowlist_externals =
    bash
commands =
    bash -c 'rm -rf dist'
    python -m build
    bash -c 'python -m twine check dist/*.whl'
    bash -c 'python -m twine check dist/*.gz'

[testenv:py{39,310,311,312}-test_built_package]
skip_install = true
deps =
    pytest
allowlist_externals =
    bash
commands =
    bash -c 'python -m pip install {posargs:dist/*.whl}'
    pytest
"""
